--- a/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.html
@@ -2,7 +2,12 @@
     <div id="nav">
         <app-navbar [button]="false" [name]="doctorName"></app-navbar>
     </div>
-    <div class="subcontainer">
+    <div *ngIf="doctor.statusCode!='REGISTERED'" class="status"><b>
+        You do not have permission to access our site.
+        <div>Your Details are sent to the Admin for verification </div>
+        <div>Your status is = {{doctor.statusCode}}</div></b>
+    </div>
+    <div *ngIf="doctor.statusCode=='REGISTERED'" class="subcontainer">
         <div class="flex-item1">
             <app-sidebar [menus]="menus"></app-sidebar>
         </div>
