--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
@@ -47,7 +47,7 @@
                 .inner-flex {
                     display: flex;
                     flex-direction: row;
-                    gap: 2em;
+                    gap: 1em;
 
                     #cards {
                         background: #FFFFFF;
@@ -55,17 +55,29 @@
                         border-radius: 0.4em;
                         padding: 0.7em;
                         padding-bottom: 0em;
+                        margin-bottom: 0em;
                         display: flex;
                         width: 100%;
                         flex-direction: row;
                         justify-content: space-between;
+                        font-size: 1em;
 
                         p {
                             font-weight: 600;
                             font-size: 1.1em;
-                            line-height: 1.5em;
+                            // line-height: 1.5em;
                             color: #2C2D2D;
                         }
+                        .text1{
+                            // display: flex;
+                            // flex-direction: column;
+                            // gap: 0em;
+                        span{
+                            font-weight: 600;
+                            font-size: 1em;
+                            color: #2C2D2D;
+                        }
+                    }
 
                         h3 {
                             font-weight: 600;
