--- a/CHL-Frontend/src/app/components/admin/registered-doctors/registered-doctors.component.html
+++ b/CHL-Frontend/src/app/components/admin/registered-doctors/registered-doctors.component.html
@@ -35,6 +35,22 @@
             </tr>
           </table>
           </div>
+          <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
+            <div class="modal-content">
+              <div class="modal-body">
+                <div class="modal-footer">
+                  <br>
+                  <h4 class="modal-title">Registered!</h4>
+                  <div>
+                    <app-button [btntext]="'Close'" [btnConfig]="textBtnConfig" (click)="closePopup()">
+                    </app-button>
+                  </div>
+                </div>
+
+
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
