doctor delete on verification denied

--- a/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.html
@@ -24,7 +24,7 @@
           </div> -->
           <br />
           <div class="modal-footer">
-            <app-button [btntext]="'OK'" [btnConfig]="textBtnConfig" (click)="''">
+            <app-button [btntext]="'OK'" [btnConfig]="textBtnConfig" (click)="removeDoctor()">
             </app-button>
           </div>
         </div>
