popup bug resolved in 1. to be registered 2. in progress 3. doctor dashboard

--- a/CHL-Frontend/src/app/components/admin/admin-in-progress/admin-in-progress.component.scss
+++ b/CHL-Frontend/src/app/components/admin/admin-in-progress/admin-in-progress.component.scss
@@ -156,9 +156,10 @@ td {
 
 .modal {    
   position: relative;
-  margin-left: 20em;
+  margin-left: auto;
+  margin-right: auto;
   width: 25em;
-  height: 17em;
+  // height: 17em;
   background-color: #fff;
   // text-align: center;
   // align-self: center;
