--- a/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.html
+++ b/CHL-Frontend/src/app/components/doctor/doctor-dashboard/doctor-dashboard.component.html
@@ -16,7 +16,7 @@
           <h4 class="modal-title">Important!</h4>
         </div>
         <div class="modal-body">
-              <p><b>Your details are being removed from our database as we couldn't verify your documents. Please register again!</b></p>
+              <p><b>Your details are being removed from our database as we couldn't verify your details. Please register again!</b></p>
           <br />
           <div class="modal-footer">
             <app-button [btntext]="'OK'" [btnConfig]="textBtnConfig" (click)="removeDoctor()">
