--- a/CHL-Frontend/src/app/common/sidebar/sidebar.component.html
+++ b/CHL-Frontend/src/app/common/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
             height="25">
         <img id="sidebar-icon" *ngIf="menu.value[0]!='Dashboard'" src="assets/images/Sidebar-icons.svg" width="25"
             height="25"> -->
-            <!-- <i class="fi fi-rr-angle-small-right"></i> -->
+            <i class="fi fi-rr-bolt"></i>
         {{menu.value[0]}}
     </div>
 </div>
