--- a/CHL-Frontend/src/app/components/graphs/area-graph/area-graph.component.html
+++ b/CHL-Frontend/src/app/components/graphs/area-graph/area-graph.component.html
@@ -19,11 +19,11 @@
     }
 
     #spring stop[offset="0"] {
-        stop-color:  #e52165 ;
+        stop-color:  #f68ab0 ;
     }
 
     #spring stop[offset="1"] {
-        stop-color: #e7e8d1;
+        stop-color: #c6cef0;
     }
 </style>
 <svg style="height: 0">
