--- a/CHL-Frontend/src/app/components/graphs/pulse-line-graph/pulse-line-graph.component.html
+++ b/CHL-Frontend/src/app/components/graphs/pulse-line-graph/pulse-line-graph.component.html
@@ -12,21 +12,21 @@
 </div>
 <style>
 
-#spring stop {
+#pulse stop {
         stop-color: #7fe7dc;
     }
 
-    #spring stop[offset="0"] {
-        stop-color:   #f47a60  ;
+    #pulse stop[offset="0"] {
+        stop-color:   #f5c4b9  ;
     }
 
-    #spring stop[offset="1"] {
-        stop-color:  #7fe7dc ;
+    #pulse stop[offset="1"] {
+        stop-color:  #74d5cb ;
     }
 </style>
 <svg style="height: 0">
     <defs>
-        <linearGradient id="spring" x1="0" x2="0" y1="0" y2="1">
+        <linearGradient id="pulse" x1="0" x2="0" y1="0" y2="1">
             <stop offset="0"></stop>
             <stop offset="1"></stop>
         </linearGradient>
