--- a/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
+++ b/CHL-Frontend/src/app/components/patient/patient-dashboard/patient-dashboard.component.scss
@@ -3,6 +3,7 @@
     height: 100vh;
     font-family: 'Montserrat';
     font-style: normal;
+    display: table-cell;
 
     #nav {
         height: 7%;
@@ -10,12 +11,11 @@
     }
 
     .subcontainer {
-        width: 100%;
-        height: 93%;
         background-color: #f5feff;
         display: flex;
         flex-direction: row;
-
+        width: 100%;
+        height: 100%;
 
         .flex-item1 {
             width: 18%;
@@ -23,12 +23,20 @@
         }
 
         .flex-item2 {
-            width: 77%;
-            height: 90%;
+            width: 80%;
+            height: 95%;
             box-shadow: 0 0.2em 0.5em rgba(0, 0, 0, 0.15);
             border-radius: 0.7em;
             background: #FFFFFF;
-            margin: auto;
+            // margin: auto;
+            margin: 2em;
+            margin-bottom: 0;
+
+            // display: grid;
+            // grid-template-columns: 1fr;
+            // grid-template-rows: 1fr;
+            // gap: 0em 0em;
+            // grid-template-areas: ".";
 
             #heading {
                 font-weight: 700;
@@ -37,6 +45,13 @@
                 color: #2C2D2D;
                 margin: 1.25em;
             }
+            p {
+                font-weight: 600;
+                font-size: 1.1em;
+                // line-height: 1.5em;
+                color: #2C2D2D;
+            }
+
 
             .main-flex {
                 display: flex;
@@ -48,6 +63,7 @@
                     display: flex;
                     flex-direction: row;
                     gap: 1em;
+                    margin: 1em;
 
                     #cards {
                         background: #FFFFFF;
@@ -62,22 +78,18 @@
                         justify-content: space-between;
                         font-size: 1em;
 
-                        p {
-                            font-weight: 600;
-                            font-size: 1.1em;
-                            // line-height: 1.5em;
-                            color: #2C2D2D;
-                        }
-                        .text1{
+                       
+                        .text1 {
+
                             // display: flex;
                             // flex-direction: column;
                             // gap: 0em;
-                        span{
-                            font-weight: 600;
-                            font-size: 1em;
-                            color: #2C2D2D;
+                            span {
+                                font-weight: 600;
+                                font-size: 1em;
+                                color: #2C2D2D;
+                            }
                         }
-                    }
 
                         h3 {
                             font-weight: 600;
@@ -93,7 +105,7 @@
                 }
 
                 .tabs {
-                    
+
 
                     .nav {
                         width: 100%;
@@ -135,7 +147,7 @@
                     }
                 }
 
-                .charts{
+                .charts {
                     padding: auto;
                 }
 
